# Bug-Forge

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  full_output.txt  full_output_v3.txt  inference.py  models.py  openenv.yaml  output.txt  output_gemini.txt  output_hf.txt  pyproject.toml  test_llm.py  testsample.py  validate.sh
__pycache__/: inference.cpython-313.pyc.2158430729632
bugs/: injector.py
bugs/task_1/: bug_config.json
bugs/task_1/clean/: utils.py
bugs/task_1/working/: cart.py  tests.py  utils.py
bugs/task_2/: bug_config.json
bugs/task_2/clean/: cart.py  models.py
bugs/task_2/working/: models.py  tests.py
bugs/task_3/: bug_config.json
bugs/task_3/clean/: cart.py  tests.py
bugs/task_3/working/: cart.py
bugs/task_4/: bug_config.json
bugs/task_4/clean/: cart.py  tests.py  utils.py
bugs/task_5/: bug_config.json
bugs/task_5/clean/: cart.py  models.py  tests.py
openenv_bugforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  bugforge_environment.py
